# deribit_trading

./: .gitignore  CMakeLists.txt
src/: main.cpp  types.hpp
src/api/: client.cpp  client.hpp  websocket.cpp  websocket.hpp
src/market/: market_data.cpp  market_data.hpp
src/order/: order.cpp  order.hpp  orderbook.cpp  orderbook.hpp
src/utils/: config.cpp  config.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
